--- a/css/style-core.css
+++ b/css/style-core.css
@@ -1242,6 +1242,17 @@ input[type="reset"]:focus {
 	font-weight: 300;
 }
 
+.subscription-block .subscribe-box form input[type=number] {
+	width: 400px;
+	max-width: 100%;
+	height: 56px;
+	border: none;
+	padding: 0 30px;
+	border-radius: 56px;
+	margin-right: 20px;
+	font-weight: 300;
+}
+
 .subscription-block .subscribe-box form input[type=submit] {
 	display: inline-block;
 	height: 56px;
@@ -7529,6 +7540,10 @@ body .tribe-bar-views-inner {
 		margin: 35px 0px 0px -13px !important;
 	}
 
+	.mrg21 {
+		margin-left: 5px !important;
+	}
+
 	.lang1 {
 		text-align: right !important;
 		padding-left: 133px !important;
@@ -7564,6 +7579,11 @@ body .tribe-bar-views-inner {
 
 	.width3 {
 		width: 50% !important;
+	}
+
+	.width4 {
+		min-width: 101px !important;
+		margin-left: 3px !important;
 	}
 
 	.img1 {
@@ -7627,7 +7647,7 @@ body .tribe-bar-views-inner {
 
 	.title2-ar {
 		font-size: 30px !important;
-		margin: 36px 0px 0px -405px !important;
+		margin: 36px 0px 0px -430px !important;
 	}
 
 	.title2b {
@@ -7637,7 +7657,12 @@ body .tribe-bar-views-inner {
 
 	.title2b-ar {
 		font-size: 22px !important;
-		margin: 25px 0px 0px -308px !important;
+		margin: 25px 0px 0px -375px !important;
+	}
+
+	.title2b-ar2 {
+		font-size: 22px !important;
+		margin: 25px 0px 0px -555px !important;
 	}
 
 	.title3 {
@@ -7670,6 +7695,13 @@ body .tribe-bar-views-inner {
 		margin: 15px 0px 0px -393px !important;
 		min-width: 180px !important;
 	}
+
+	.line10 {
+		margin: 15px 0px 0px -505px !important;
+		min-width: 180px !important;
+	}
+
+
 
 	.text1 {
 		font-size: 14px !important;
@@ -7760,6 +7792,18 @@ body .tribe-bar-views-inner {
 	}
 
 	.subscription-block .subscribe-box form input[type=email] {
+		width: 265px;
+		max-width: 100%;
+		height: 40px !important;
+		border: none;
+		padding: 0 30px !important;
+		border-radius: 56px;
+		margin-right: 20px;
+		font-weight: 300;
+		margin: 0px 20px !important;
+	}
+
+	.subscription-block .subscribe-box form input[type=number] {
 		width: 265px;
 		max-width: 100%;
 		height: 40px !important;
