--- a/css/style-core.css
+++ b/css/style-core.css
@@ -7669,6 +7669,45 @@ body .tribe-bar-views-inner {
 		margin-top: 3px !important;
 	}
 
+	.mrg22 {
+		margin-right: 0px !important;
+	}
+
+	.mrg23 {
+		margin-top: 20px !important;
+	}
+
+	.mrg24 {
+		margin-top: -55px;
+	}
+
+	.mrg25 {
+		margin-top: -25px;
+		margin-bottom: -100px;
+	}
+
+	.mrg26 {
+		margin-top: -25px;
+	}
+
+	.mrg27 {
+		margin-bottom: -35px;
+	}
+
+	.mrg28 {
+		margin: -25px 0px -75px 0;
+	}
+
+	.mrg29 {
+		margin-top: -40px;
+	}
+
+	.mrg30 {
+		margin: -25px 0px -80px 0;
+	}
+
+
+
 	.lang1 {
 		text-align: right !important;
 		padding-left: 133px !important;
@@ -7692,6 +7731,14 @@ body .tribe-bar-views-inner {
 
 	.height4 {
 		height: 180px !important;
+	}
+
+	.height5 {
+		height: 185px !important;
+	}
+
+	.height6 {
+		height: 155px !important;
 	}
 
 	.width1 {
@@ -7826,12 +7873,43 @@ body .tribe-bar-views-inner {
 		min-width: 180px !important;
 	}
 
+	.line3-ar {
+		margin: 15px 0px 0px -465px !important;
+		min-width: 180px !important;
+	}
+
+	.line4-ar {
+		margin: -15px 0px 0px -429px !important;
+		max-width: 215px !important;
+	}
+
+	.line5-ar {
+		margin: -15px 0px 0px -429px !important;
+		max-width: 233px !important;
+	}
+	
+	.line2-ar {
+		margin: -5px 0px 0px 158px !important;
+		min-width: 290px !important;
+	}
+
 	.line10 {
 		margin: 15px 0px 0px -505px !important;
 		min-width: 180px !important;
 	}
 
 
+	#vmd br {
+		display: none;
+	}
+
+	#inter br {
+		display: none;
+	}
+
+	#jewd br{
+		display: none;
+	}
 
 	.text1 {
 		font-size: 14px !important;
@@ -8024,10 +8102,11 @@ body .tribe-bar-views-inner {
 	}
 
 	.caption1-ar {
-		margin: 35px 0px 0px -585px !important;
+		margin: 35px 0px 0px -419px !important;
 		transform: scale(0.8) !important;
+		min-width: 221px !important;
 	}
-
+	
 	.cheif-img {
 		/* width: 75%; */
 		margin-left: -9% !important;
@@ -8174,6 +8253,17 @@ body .tribe-bar-views-inner {
 		margin-left: -375px !important;
 	}
 
+	.heading6 {
+		font-size: 25px !important;
+		margin-left: -86px !important;
+		width: max-content;
+	}
+
+	.heading7 {
+		font-size: 25px !important;
+		margin-left: -390px !important;
+	}
+
 	.heading3div {
 		position: relative !important;
 		bottom: 450px;
@@ -8258,7 +8348,7 @@ body .tribe-bar-views-inner {
 		width: 20px;
 		height: 20px;
 		margin-right: 10px;
-		margin-left: 0px !important;
+		margin-left: 5px !important;
 	}
 
 	.grid-container-intr {
