--- a/css/style-core.css
+++ b/css/style-core.css
@@ -1428,6 +1428,7 @@ input[type="reset"]:focus {
 	font-weight: 100 !important;
 }
 
+
 .abt-ar {
 	float: right !important;
 	margin-left: 145px;
@@ -1895,6 +1896,47 @@ input[type="reset"]:focus {
 .ar-mrg8 {
 	margin-right: -10px;
 	text-align: right !important;
+}
+
+.ar-mrg9 {
+	margin-top: 50px !important;
+	margin-right: -150px !important;
+}
+
+.ar-mrg10 {
+	margin-right: -965px !important;
+	margin-top: 86px !important;
+}
+
+.ar-mrg11 {
+	margin-top: 25px !important;
+}
+
+.ar-mrg12 {
+	margin-top: 35px !important;
+	margin-right: -160px;
+}
+
+.course-ar {
+
+	text-transform: uppercase;
+	color: #EB8223 !important;
+	background-color: white;
+	padding: 20px 40px 20px 40px;
+	font: 500 55px 'GE SS Two' !important;
+	width: fit-content;
+}
+
+.course-ar2 {
+	font: 700 24px 'GE SS Two' !important;
+	letter-spacing: 0px;
+	text-transform: none;
+	color: #1a1a1a;
+}
+
+
+.terms-mrg {
+	margin-right: -480px;
 }
 
 /* End Arabic CSS */
