--- a/css/style-core.css
+++ b/css/style-core.css
@@ -1144,7 +1144,7 @@ input[type="reset"]:focus {
 }
 
 .subscription-block-gal-ar {
-	top: 175px !important;
+	top: 100px !important;
 }
 
 
@@ -1946,6 +1946,9 @@ input[type="reset"]:focus {
 	margin-right: -480px;
 }
 
+.mrgterms {
+    margin-top: 25px;
+}
 /* End Arabic CSS */
 
 
@@ -7773,6 +7776,24 @@ body .tribe-bar-views-inner {
 		margin-top: -130px;
 	}
 
+	.mrg33{
+		margin-bottom: 25px;
+	}
+
+	.mrg34 {
+		margin: 5px 0px 15px 60px !important;
+	}
+
+	.mrg35 {
+		margin-bottom: -30px;
+	}
+
+	.mrg-agree {
+		margin-top: 45px;
+	}
+
+	
+
 	.lang1 {
 		text-align: right !important;
 		padding-left: 133px !important;
@@ -7996,6 +8017,15 @@ body .tribe-bar-views-inner {
 		font-size: 16px !important;
 		text-align: center !important;
 		margin: 0px 60px !important;
+		padding-top: 20px !important;
+		padding-bottom: 10px !important;
+		line-height: 25px !important;
+	}
+
+	.text3-ar {
+		font-size: 16px !important;
+		text-align: center !important;
+		margin: 0px 83px !important;
 		padding-top: 20px !important;
 		padding-bottom: 10px !important;
 		line-height: 25px !important;
@@ -8462,6 +8492,10 @@ body .tribe-bar-views-inner {
 		margin-top: 80% !important;
 	}
 
+	.terms-mrg {
+		margin-right: 0px;
+	}
+	
 }
 
 /* responsive end  */
