--- a/css/style-core.css
+++ b/css/style-core.css
@@ -733,6 +733,7 @@ input[type="reset"]:focus {
 		url('../fonts/ITCAvantGardeStd-Demi.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
+	font-display: swap;
 
 }
 
@@ -745,6 +746,7 @@ input[type="reset"]:focus {
 		url('../fonts/GESSTwoMedium/GE\ SS\ Two\ Medium.ttf') format('truetype');
 	font-weight: 500;
 	font-style: normal;
+	font-display: swap;
 }
 
 
