--- a/css/kingster-style-custom.css
+++ b/css/kingster-style-custom.css
@@ -5028,7 +5028,7 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 }
 
 #div_983a_302 {
-	background-image: url(../img/B34A0461.jpg);
+	background-image: url(../img/B34A0461.webp);
 	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
